--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,10 +29,13 @@
         "semi": ["error", "always"], 
         "no-extra-semi": "error",       
         "space-before-function-paren": "off",
-        "react/react-in-jsx-scope": "off",
         "indent": ["warn", 4],
         "comma-dangle": ["error", "never"],
+        "key-spacing": ["error"],        
+        "switch-colon-spacing": ["error", {"before": false, "after": true}],        
+        "react/react-in-jsx-scope": "off",
         "@typescript-eslint/member-delimiter-style": "error",
-        "@typescript-eslint/no-explicit-any":"off"        
+        "@typescript-eslint/no-explicit-any":"off",
+        "@typescript-eslint/type-annotation-spacing": ["error"]        
     }
 }
